--- a/cil-1.7.3/Makefile.in
+++ b/cil-1.7.3/Makefile.in
@@ -65,7 +65,7 @@ endif
 EXE = $(EXEMODE)$(EXEEXT)
 
 OCAMLBUILD = @OCAMLBUILD@
-OCAMLBUILD += -build-dir $(OBJDIR) -no-links -classic-display
+OCAMLBUILD += -use-ocamlfind -pkgs ocamlgraph -build-dir $(OBJDIR) -no-links -classic-display
 
 OCAMLFIND = @OCAMLFIND@
 
