track definitions by clause

--- a/cil-1.7.3/Makefile.in
+++ b/cil-1.7.3/Makefile.in
@@ -64,6 +64,7 @@ endif
 
 EXE = $(EXEMODE)$(EXEEXT)
 
+# DSN modified this to make ocamlgraph work
 OCAMLBUILD = @OCAMLBUILD@
 OCAMLBUILD += -use-ocamlfind -pkgs ocamlgraph -build-dir $(OBJDIR) -no-links -classic-display
 
