--- a/georg/smt2-simplifier/examples/Makefile
+++ b/georg/smt2-simplifier/examples/Makefile
@@ -3,3 +3,16 @@ SMT_SIMPLIFIER=../smtlib
 example1:
 	@$(SMT_SIMPLIFIER) < example1.smt2
 
+example2:
+	@$(SMT_SIMPLIFIER) < example2.smt2
+
+example3:
+	@$(SMT_SIMPLIFIER) < example3.smt2
+
+example4:
+	@$(SMT_SIMPLIFIER) < example4.smt2
+
+example5:
+	@$(SMT_SIMPLIFIER) < example5.smt2
+
+
