--- a/georg/smt2-simplifier/examples/Makefile
+++ b/georg/smt2-simplifier/examples/Makefile
@@ -1,5 +1,7 @@
 SMT_SIMPLIFIER=../smtlib
 
+all: example1 example2 example3 example4 example5 example6 example7 example8
+
 example1:
 	@$(SMT_SIMPLIFIER) < example1.smt2
 
@@ -14,5 +16,14 @@ example4:
 
 example5:
 	@$(SMT_SIMPLIFIER) < example5.smt2
+
+example6:
+	@$(SMT_SIMPLIFIER) < example6.smt2
+
+example7:
+	@$(SMT_SIMPLIFIER) < example7.smt2
+
+example8:
+	@$(SMT_SIMPLIFIER) < example8.smt2
 
 
