Better output when running all examples at once.

--- a/georg/smt2-simplifier/examples/Makefile
+++ b/georg/smt2-simplifier/examples/Makefile
@@ -3,48 +3,63 @@ SMT_SIMPLIFIER=../smtlib
 all: example1 example2 example3 example4 example5 example6 example7 example8 example9 example10 example11 example12 example13 example14 example15
 
 example1:
+	@echo "example1:"
 	@$(SMT_SIMPLIFIER) < example1.smt2
 
 example2:
+	@echo "example2:"
 	@$(SMT_SIMPLIFIER) < example2.smt2
 
 example3:
+	@echo "example3:"
 	@$(SMT_SIMPLIFIER) < example3.smt2
 
 example4:
+	@echo "example4:"
 	@$(SMT_SIMPLIFIER) < example4.smt2
 
 example5:
+	@echo "example5:"
 	@$(SMT_SIMPLIFIER) < example5.smt2
 
 example6:
+	@echo "example6:"
 	@$(SMT_SIMPLIFIER) < example6.smt2
 
 example7:
+	@echo "example7:"
 	@$(SMT_SIMPLIFIER) < example7.smt2
 
 example8:
+	@echo "example8:"
 	@$(SMT_SIMPLIFIER) < example8.smt2
 
 example9:
+	@echo "example9:"
 	@$(SMT_SIMPLIFIER) < example9.smt2
 
 example10:
+	@echo "example10:"
 	@$(SMT_SIMPLIFIER) < example10.smt2
 
 example11:
+	@echo "example11:"
 	@$(SMT_SIMPLIFIER) < example11.smt2
 
 example12:
+	@echo "example12:"
 	@$(SMT_SIMPLIFIER) < example12.smt2
 
 example13:
+	@echo "example13:"
 	@$(SMT_SIMPLIFIER) < example13.smt2
 
 example14:
+	@echo "example14:"
 	@$(SMT_SIMPLIFIER) < example14.smt2
 
 example15:
+	@echo "example15:"
 	@$(SMT_SIMPLIFIER) < example15.smt2
 
 
