Added error message filtering to eval<i> make targets.

--- a/georg/scripted-experiments/Makefile
+++ b/georg/scripted-experiments/Makefile
@@ -14,6 +14,7 @@ eval0:
 	./scatter_plot_statements.sh data_option0.filtered.dat scatter_plot_statements.data_option0.filtered.pdf
 	./scatter_plot_context_switches.sh data_option0.filtered.dat scatter_plot_context_switches.data_option0.filtered.pdf
 	./scatter_plot_variables.sh data_option0.filtered.dat scatter_plot_variables.data_option0.filtered.pdf
+	python filter_error_messages.py data_option0.faulty.dat generate_statistics.0.out > error_messages.0.txt
 
 option1:
 	./generate_statistics_for_index.sh 1
@@ -25,6 +26,7 @@ eval1:
 	./scatter_plot_statements.sh data_option1.filtered.dat scatter_plot_statements.data_option1.filtered.pdf
 	./scatter_plot_context_switches.sh data_option1.filtered.dat scatter_plot_context_switches.data_option1.filtered.pdf
 	./scatter_plot_variables.sh data_option1.filtered.dat scatter_plot_variables.data_option1.filtered.pdf
+	python filter_error_messages.py data_option1.faulty.dat generate_statistics.1.out > error_messages.1.txt
 
 option2:
 	./generate_statistics_for_index.sh 2
@@ -36,6 +38,7 @@ eval2:
 	./scatter_plot_statements.sh data_option2.filtered.dat scatter_plot_statements.data_option2.filtered.pdf
 	./scatter_plot_context_switches.sh data_option2.filtered.dat scatter_plot_context_switches.data_option2.filtered.pdf
 	./scatter_plot_variables.sh data_option2.filtered.dat scatter_plot_variables.data_option2.filtered.pdf
+	python filter_error_messages.py data_option2.faulty.dat generate_statistics.2.out > error_messages.2.txt
 
 option3:
 	./generate_statistics_for_index.sh 3
@@ -56,6 +59,7 @@ eval6:
 	./scatter_plot_statements.sh data_option6.filtered.dat scatter_plot_statements.data_option6.filtered.pdf
 	./scatter_plot_context_switches.sh data_option6.filtered.dat scatter_plot_context_switches.data_option6.filtered.pdf
 	./scatter_plot_variables.sh data_option6.filtered.dat scatter_plot_variables.data_option6.filtered.pdf
+	python filter_error_messages.py data_option6.faulty.dat generate_statistics.6.out > error_messages.6.txt
 
 option7:
 	./generate_statistics_for_index.sh 7
@@ -67,6 +71,7 @@ eval7:
 	./scatter_plot_statements.sh data_option7.filtered.dat scatter_plot_statements.data_option7.filtered.pdf
 	./scatter_plot_context_switches.sh data_option7.filtered.dat scatter_plot_context_switches.data_option7.filtered.pdf
 	./scatter_plot_variables.sh data_option7.filtered.dat scatter_plot_variables.data_option7.filtered.pdf
+	python filter_error_messages.py data_option7.faulty.dat generate_statistics.7.out > error_messages.7.txt
 
 option8:
 	./generate_statistics_for_index.sh 8
