Example that shows the ITE simplification problem.

--- a/georg/smt2-simplifier/examples/Makefile
+++ b/georg/smt2-simplifier/examples/Makefile
@@ -81,3 +81,7 @@ example19:
 	@echo "example19:"
 	@$(SMT_SIMPLIFIER) < example19.smt2
 
+example20:
+	@echo "example20:"
+	@$(SMT_SIMPLIFIER) < example20.smt2
+
