--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ examples/tcas/tcas_dir/
 georg/concurrent-datastructure/
 georg/test/
 georg/smt2-simplifier/smtlib_main.native
+georg/smt2-simplifier/smtlib
 georg/smt2-simplifier/_build/
 test/output.allfile.binarysearch.txt
 test/output.allfile.noninductive.txt
