Ignore generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,19 @@ examples/simple/simple_dir/
 examples/tcas/tcas_dir/
 georg/concurrent-datastructure/
 georg/test/
+georg/traces/apache1/locks/*.txt
+georg/traces/apache1/locks/smt/
+georg/traces/apache2/locks/*.txt
+georg/traces/apache2/locks/smt/
+georg/traces/bankaccount/locks/*.txt
+georg/traces/bankaccount/locks/smt/
+georg/traces/bluetooth/locks/*.txt
+georg/traces/bluetooth/locks/smt/
+georg/traces/deadlock/locks/*.txt
+georg/traces/deadlock/locks/smt/
+georg/traces/pool/locks/*.txt
+georg/traces/pool/locks/smt/
+georg/scripted-experiments/data/
 georg/smt2-simplifier/smtlib_main.native
 georg/smt2-simplifier/smtlib
 georg/smt2-simplifier/_build/
