Ignoring generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -25,17 +25,29 @@ examples/tcas/tcas_dir/
 georg/concurrent-datastructure/
 georg/test/
 georg/traces/apache1/locks/*.txt
+georg/traces/apache1/nolocks/*.txt
 georg/traces/apache1/locks/smt/
+georg/traces/apache1/nolocks/smt/
 georg/traces/apache2/locks/*.txt
+georg/traces/apache2/nolocks/*.txt
 georg/traces/apache2/locks/smt/
+georg/traces/apache2/nolocks/smt/
 georg/traces/bankaccount/locks/*.txt
+georg/traces/bankaccount/nolocks/*.txt
 georg/traces/bankaccount/locks/smt/
+georg/traces/bankaccount/nolocks/smt/
 georg/traces/bluetooth/locks/*.txt
+georg/traces/bluetooth/nolocks/*.txt
 georg/traces/bluetooth/locks/smt/
+georg/traces/bluetooth/nolocks/smt/
 georg/traces/deadlock/locks/*.txt
+georg/traces/deadlock/nolocks/*.txt
 georg/traces/deadlock/locks/smt/
+georg/traces/deadlock/nolocks/smt/
 georg/traces/pool/locks/*.txt
+georg/traces/pool/nolocks/*.txt
 georg/traces/pool/locks/smt/
+georg/traces/pool/nolocks/smt/
 georg/scripted-experiments/data/
 georg/smt2-simplifier/smtlib_main.native
 georg/smt2-simplifier/smtlib
