Definitions of terms.

--- a/georg/causality2/Makefile
+++ b/georg/causality2/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ -std=c++11 -Wall -o SyMPC main.cpp function_representation.cpp cbmc.cpp ../validation/validator.cpp ../encoding/functional_encoding.cpp ../encoding/encoding.cpp ../types.cpp ../synthesis/synthesizer.cpp ../add/add.cpp ../init/init.cpp -lpthread
+	g++ -std=c++11 -Wall -o causality main.cpp cbmc.cpp -lpthread
 
 test_cbmc:
 	g++ -std=c++11 -Wall -o TestCBMC test_cbmc.cpp cbmc.cpp -lpthread
