Modified example to show when happens before relations are dropped from interpolants.

--- a/georg/multi-trace-encoding/Makefile
+++ b/georg/multi-trace-encoding/Makefile
@@ -1,5 +1,10 @@
 all:
-	java -jar ../../smtinterpol/smtinterpol.jar example01.smt2
+	java -jar ../../smtinterpol/smtinterpol.jar example01.smt2 > out01.txt 2>&1
+	java -jar ../../smtinterpol/smtinterpol.jar example02.smt2 > out02.txt 2>&1
+	java -jar ../../smtinterpol/smtinterpol.jar example03.smt2 > out03.txt 2>&1
 
 clean:
 	rm *~
+	rm -f out01.txt
+	rm -f out02.txt
+	rm -f out03.txt
