Refactoring: Moved testing code for expressions into separate executable.

--- a/georg/merger/Makefile
+++ b/georg/merger/Makefile
@@ -1,6 +1,12 @@
-all:
+all: merger expr_test
+
+merger:
 	g++ -std=c++11 -Wall -o merger merger.cpp error.cpp xml.cpp
+
+expr_test:
+	g++ -std=c++11 -Wall -o expr_test expr_test.cpp error.cpp
 
 clean:
 	rm -f ./merger
+	rm -f ./expr_test
 
