Classify variables that are read.

--- a/georg/merger/Makefile
+++ b/georg/merger/Makefile
@@ -1,10 +1,13 @@
+CXX=g++
+CXXFLAGS=-std=c++11 -Wall
+
 all: merger expr_test
 
 merger:
-	g++ -std=c++11 -Wall -o merger merger.cpp error.cpp xml.cpp
+	$(CXX) $(CXXFLAGS) -o merger merger.cpp error.cpp xml.cpp
 
 expr_test:
-	g++ -std=c++11 -Wall -o expr_test expr_test.cpp error.cpp
+	$(CXX) $(CXXFLAGS) -o expr_test expr_test.cpp error.cpp
 
 clean:
 	rm -f ./merger
