Fixed clashing targets and files names in Makefile.

--- a/georg/merger/Makefile
+++ b/georg/merger/Makefile
@@ -1,15 +1,18 @@
+.PHONY=all clean merger expr_test
 CXX=g++
 CXXFLAGS=-std=c++11 -Wall
+MERGER_EXE=merge
+EXPR_TEST_EXE=exprtest
 
 all: merger expr_test
 
 merger:
-	$(CXX) $(CXXFLAGS) -o merger merger.cpp error.cpp xml.cpp
+	$(CXX) $(CXXFLAGS) -o $(MERGER_EXE) merger.cpp error.cpp xml.cpp
 
 expr_test:
-	$(CXX) $(CXXFLAGS) -o expr_test expr_test.cpp error.cpp
+	$(CXX) $(CXXFLAGS) -o $(EXPR_TEST_EXE) expr_test.cpp error.cpp
 
 clean:
-	rm -f ./merger
-	rm -f ./expr_test
+	rm -f ./$(MERGER_EXE)
+	rm -f ./$(EXPR_TEST_EXE)
 
