--- a/georg/merger/fa/Makefile
+++ b/georg/merger/fa/Makefile
@@ -1,6 +1,6 @@
 all: libfa
 
 libfa:
-	g++ -std=c++11 -c fa.cpp hash.cpp memory.cpp ref.cpp internal.cpp
+	g++ -Wall -std=c++11 -c fa.cpp hash.cpp memory.cpp ref.cpp internal.cpp
 
 
